Content editor: fix overlapping language/input elements with textareas and HTML inputs
git-svn-id: http://svn.flexive.org/repository/flexive/trunk@2787 d35d4baa-7912-0410-b0ae-edacad209e15

--- a/src/ui/jsf-shared/resources/META-INF/resources/flexive-faces/css/components.css
+++ b/src/ui/jsf-shared/resources/META-INF/resources/flexive-faces/css/components.css
@@ -82,6 +82,12 @@ textarea.fxValueTextArea, textarea.fxValueTextAreaHtml {
     filter: alpha(opacity = 30);
 }
 
+.fxValueInputMultiLang .fxValueHtmlEditorContainer,
+.fxValueInputMultiLang .fxValueTextAreaContainer {
+    display: block;
+    clear: both;
+}
+
 .fxValueTextAreaContainer {
     height: 150px;
 }
